<resources>
    <string name="app_name">HomiApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Activity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_trending">Trending</string>
    <string name="title_subscription">Subscription</string>
    <string name="title_library">Library</string>
    <string name="transition_poster">movie_poster</string>

    <string name="test">Inspirational Dream - (No Copyright) Beautiful and Cinematic Background Music (Download MP3) by AShamaluevMusic playlists on SoundCloud</string>
    <string name="video_title_test_0"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_test_1"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_test_2"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_test_3"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_test_4"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_test_5"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_test_6"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_test_7"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_test_8"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_test_9"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>

    <string name="video_title_2_test_0"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_2_test_1"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_2_test_2"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_2_test_3"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_2_test_4"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_2_test_5"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_2_test_6"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_2_test_7"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_2_test_8"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>
    <string name="video_title_2_test_9"><![CDATA[<font color="#000000"><b>Spider-Man: Into the Spider-Verse is a comic book come to life, and the best animated movie of 2018</b></font>]]></string>

    <string name="channel_title_test_0">Sony Picture • 4 months ago</string>
    <string name="channel_title_test_1">Sony Picture • 4 months ago</string>
    <string name="channel_title_test_2">Sony Picture • 4 months ago</string>
    <string name="channel_title_test_3">Sony Picture • 4 months ago</string>
    <string name="channel_title_test_4">Sony Picture • 4 months ago</string>
    <string name="channel_title_test_5">Sony Picture • 4 months ago</string>
    <string name="channel_title_test_6">Sony Picture • 4 months ago</string>
    <string name="channel_title_test_7">Sony Picture • 4 months ago</string>
    <string name="channel_title_test_8">Sony Picture • 4 months ago</string>
    <string name="channel_title_test_9">Sony Picture • 4 months ago</string>

    <string name="trending">Trending</string>
    <string name="live">Live</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="new_to_you">New to you</string>
    <string name="all">All</string>
    <string name="explore">Explore</string>
    <string name="send_feedback">SEND FEEDBACK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dislike">Dislike</string>
    <string name="play">Play</string>
    <string name="image_banner">image_banner</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>