<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/myToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_homi_logo"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_homi_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_person_outline_24"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/search"
                app:layout_constraintBottom_toBottomOf="@+id/profile"
                app:layout_constraintEnd_toStartOf="@+id/profile"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/notifications"
                app:layout_constraintBottom_toBottomOf="@+id/iv_search"
                app:layout_constraintEnd_toStartOf="@+id/iv_search"
                app:layout_constraintTop_toTopOf="@+id/iv_search" />

            <ImageView
                android:id="@+id/iv_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/cast"
                app:layout_constraintBottom_toBottomOf="@+id/iv_notification"
                app:layout_constraintEnd_toStartOf="@+id/iv_notification"
                android:contentDescription="" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="none"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_homi_logo">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scrollbars="none"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <com.google.android.material.chip.Chip
                                android:id="@+id/like"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/explore"
                                android:textStyle="bold"
                                app:chipCornerRadius="4dp"
                                app:chipIcon="@drawable/explore"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <View
                                android:id="@+id/separator"
                                android:layout_width="1dp"
                                android:layout_height="30dp"
                                android:layout_marginStart="10dp"
                                android:background="#515050"
                                app:layout_constraintBottom_toBottomOf="@id/like"
                                app:layout_constraintStart_toEndOf="@id/like"
                                app:layout_constraintTop_toTopOf="@id/like" />

                            <com.google.android.material.chip.ChipGroup
                                android:id="@+id/chipGroup"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                app:layout_constraintBottom_toBottomOf="@id/like"
                                app:layout_constraintStart_toEndOf="@id/separator"
                                app:layout_constraintTop_toTopOf="@id/like">

                                <com.google.android.material.chip.Chip
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/all"
                                    android:textStyle="bold"
                                    app:chipBackgroundColor="#9A9898" />

                                <com.google.android.material.chip.Chip
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/new_to_you"
                                    android:textStyle="bold"
                                    app:chipStrokeColor="@color/orange"
                                    app:chipStrokeWidth="0.2dp" />

                                <com.google.android.material.chip.Chip
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/live"
                                    android:textStyle="bold"
                                    app:chipStrokeColor="#777676"
                                    app:chipStrokeWidth="0.2dp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/iv_homi_logo" />

                                <com.google.android.material.chip.Chip
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/recently_viewed"
                                    android:textStyle="bold"
                                    app:chipStrokeColor="#777676"
                                    app:chipStrokeWidth="0.2dp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/iv_homi_logo" />

                            </com.google.android.material.chip.ChipGroup>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:text="@string/send_feedback"
                                android:textColor="#2741D6"
                                android:textSize="14sp"
                                app:layout_constraintBottom_toBottomOf="@id/chipGroup"
                                app:layout_constraintStart_toEndOf="@id/chipGroup"
                                app:layout_constraintTop_toTopOf="@id/chipGroup" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </HorizontalScrollView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

